--- a/sass/components/_tipografias.scss
+++ b/sass/components/_tipografias.scss
@@ -2,3 +2,8 @@
     font-family:'Rocketship';
     src: url('../assets/font/Rocketship.ttf');
 }
+
+@font-face {
+    font-family: 'tituloNota';
+    src: url('../assets/font/NoticiaText-Regular.ttf')
+}
