--- a/sass/layout/_main-index.scss
+++ b/sass/layout/_main-index.scss
@@ -1,44 +1,77 @@
 .informacionDiaria {
     display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+    justify-content: center;
+    align-items: center;
+    /*display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto 1fr;
     gap: 10px;
-    align-items: center;
+    align-items: center;*/
 }
 
-.text p {
-    grid-row: 1;
-    grid-column: 1;
-    font-family:'Rocketship';
-    text-align: center;
+.items img{
+    max-width: 100%;
     
 }
+    /* grid-row: 1;
+    grid-column: 1;
+    background-color: #f2f2f2;
+    padding: 20px;
+    text-align: center;
+}
 
-.ciudad {
+/*.ciudad {
     grid-row: 2;
     grid-column: auto;
-}
+    
 
 .ciudad img{
-    max-width: 100%;
-    height: auto;
+
+    max-width: 20%;
+    background-color: #f2f2f2;
+    padding: 20px;
     align-items: center;
-}
+    
+} */
 
 .cotizacion iframe{
+     /*grid-row: 1;
+    grid-column: 2;
+    background-color: #f2f2f2;
+    padding: 20px;
+    text-align: center;
+   
     grid-row: 1 / span 2;
     grid-column: 2;
+    */
 }
 
+.contenedor {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+}
 
-.notas{
+.item {
+    background-color: #ffffff;
+    padding: 5px;
+}
+
+.item img{
+    max-width: 100%;
+    height: auto;
+}
+
+/*.notas{
     display: grid;
     grid-template-columns: 50% 50%;
     justify-items: center;
     width: 100%;
 }
 
-/*.notas {
+.notas {
     display: flex;
     flex-direction: row;
 }
@@ -48,18 +81,27 @@
     padding: 20px;
     border: 1px solid #ddd;
 }
-*/
+
 .nota:hover {
     border: 3px solid coral;
 }
+*/
 
-.nota h2 {
-    font-family:'Rocketship';
-    font-weight: bold;
+.item a {
+    font-family: 'tituloNota';
+    color: black;
+    text-decoration: none;
     margin-bottom: 10px;
 }
 
-.nota article::first-letter{
+.item p {
+    font-family: 'tituloNota';
+    color: black;
+    text-decoration: none;
+    margin-bottom: 10px;
+}
+
+.item .nota article::first-letter{
     font-size: 40px;
 }
 
@@ -83,7 +125,7 @@
     margin-bottom: 30px;
 }
 
-.noticias {
+/*.noticias {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
@@ -91,7 +133,7 @@
 .noticias img {
     width: 100%;
     height: auto;
-}
+}*/
 
 .paginas {
     width: 100%; 
